After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 625496 - qtmux - misc fix on btrt box
qtmux - misc fix on btrt box
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.20
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-07-28 14:41 UTC by Marc-Andre Lureau
Modified: 2010-07-28 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtmux: btrt - max bitrate before average (1.04 KB, patch)
2010-07-28 14:41 UTC, Marc-Andre Lureau
committed Details | Review
qtmux: use caps bitrate at last chance (1.06 KB, patch)
2010-07-28 14:41 UTC, Marc-Andre Lureau
committed Details | Review

Description Marc-Andre Lureau 2010-07-28 14:41:06 UTC
Two small patches. One fix the ordering of bitrates. The second will
make use of the caps bitrate if there was not tag bitrate events
before.
Comment 1 Marc-Andre Lureau 2010-07-28 14:41:10 UTC
Created attachment 166716 [details] [review]
qtmux: btrt - max bitrate before average
Comment 2 Marc-Andre Lureau 2010-07-28 14:41:14 UTC
Created attachment 166717 [details] [review]
qtmux: use caps bitrate at last chance
Comment 3 Thiago Sousa Santos 2010-07-28 14:47:35 UTC
Review of attachment 166716 [details] [review]:

Where have you seen that the max is the first?
Comment 4 Marc-Andre Lureau 2010-07-28 14:50:45 UTC
Ä0亨1
(In reply to comment #3)
> Review of attachment 166716 [details] [review]:
> 
> Where have you seen that the max is the first?

8.5.2.2 BitRateBox, page 27 (37 in evince) of ISO document part 12 from 2008.
Comment 5 Thiago Sousa Santos 2010-07-28 14:51:02 UTC
Check this commit in -good 8aed3176ce65a1963d1b2bea8b9ed110714ca4e2
Comment 6 Marc-Andre Lureau 2010-07-28 14:53:22 UTC
so it makes sense to fix it in gstqtmux too no?
Comment 7 Thiago Sousa Santos 2010-07-28 15:28:10 UTC
You were right, the patch in qtdemux was wrong :)

Pushed. Thanks!

commit 691901da51799cb04d17ed9ba94619bc7fd61f73
Author: Marc-André Lureau <mlureau@flumotion.com>
Date:   Wed Jul 28 16:15:53 2010 +0200

    qtmux: use caps bitrate at last chance
    
    If we didn't get the stream's bitrate from one of the atoms,
    try getting it from the caps as a last resort.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=625496

commit 2e17f7cbf72014b7a5e2a5b115039213775af1b1
Author: Marc-André Lureau <mlureau@flumotion.com>
Date:   Wed Jul 28 16:12:11 2010 +0200

    qtmux: btrt - max bitrate before average
    
    According to iso base media file format, the max bitrate
    is before the avg
    
    https://bugzilla.gnome.org/show_bug.cgi?id=625496